--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,67 @@
 /* Add CSS styling here */
+.top{
+    Display:flex;
+    justify-content: center;
+    font-size: 50px;
+  color:purple;
+  margin:20px 0px 40px 0;
+}
+
+.header{
+  display:flex;
+  justify-content:center;
+  font-size:20px;
+}
+
+.home{
+  border:5px solid orange;
+}
+.about{
+  border:5px solid orange;
+}
+.contact{
+  border:5px solid orange;  
+}
+.projects{
+  border:5px solid orange;
+}
+h2{
+  display:flex;
+  justify-content:center;
+  font-size:35px;
+  color:green;
+}
+.filling{
+  display:flex;
+  justify-content:center;
+  font-size:20px;
+}
+.large img{
+  width:100%;
+  margin:10px 0;
+}
+.mid{
+  display:flex;
+  justify-content:center;
+  margin:25px;
+  
+}
+.mid img{
+  width:20%;
+}
+p{
+  font-size:20px;
+  border:20px solid white;
+  width:20%;
+}
+.footer{
+  display:flex;
+  justify-content:center;
+  background-color:gray;
+  height:50px;
+  }
+.contact-bottom{
+  border: 5px solid green;
+  padding:10px;
+}
+}
