--- a/style/index.css
+++ b/style/index.css
@@ -1,67 +1,114 @@
 /* Add CSS styling here */
 .top{
-    Display:flex;
-    justify-content: center;
-    font-size: 50px;
-  color:purple;
-  margin:20px 0px 40px 0;
+  Display:flex;
+  justify-content: center;
+  font-size: 50px;
+color:purple;
+margin:20px 0px 40px 0;
 }
 
 .header{
-  display:flex;
-  justify-content:center;
-  font-size:20px;
+display:flex;
+justify-content:center;
+font-size:20px;
 }
 
 .home{
-  border:5px solid orange;
+border:5px solid orange;
 }
 .about{
-  border:5px solid orange;
+border:5px solid orange;
 }
 .contact{
-  border:5px solid orange;  
+border:5px solid orange;  
 }
 .projects{
-  border:5px solid orange;
+border:5px solid orange;
 }
 h2{
-  display:flex;
-  justify-content:center;
-  font-size:35px;
-  color:green;
+display:flex;
+justify-content:center;
+font-size:35px;
+color:green;
 }
 .filling{
-  display:flex;
-  justify-content:center;
-  font-size:20px;
+display:flex;
+justify-content:center;
+font-size:20px;
 }
 .large img{
-  width:100%;
-  margin:10px 0;
+width:100%;
+margin:10px 0;
 }
 .mid{
-  display:flex;
-  justify-content:center;
-  margin:25px;
-  
+display:flex;
+justify-content:center;
+margin:25px;
+
 }
 .mid img{
-  width:20%;
+width:20%;
 }
 p{
-  font-size:20px;
-  border:20px solid white;
-  width:20%;
+font-size:20px;
+border:20px solid white;
+width:20%;
 }
 .footer{
-  display:flex;
-  justify-content:center;
-  background-color:gray;
-  height:50px;
-  }
+display:flex;
+justify-content:center;
+background-color:gray;
+height:50px;
+}
 .contact-bottom{
-  border: 5px solid green;
-  padding:10px;
+border: 5px solid green;
+padding:10px;
+}
+@media(max-width:800px){
+body{
+width: 100%;
+}
+.top{
+  display: flex;
+}
+.header{
+   align-items:center;
+}
+.mid {
+  flex-direction: column;
+  flex-wrap:wrap;
+  width:100%;
+  align-items:center;
+     }
+.one, .two, .three, .four{
+  width:50%;
+   }
+
+p{
+  width:100%;
+}
+}
+@media(max-width:500px){
+body{
+width: 100%;
+}
+.top{
+  display: flex;
+}
+.header{
+   align-items:center;
+}
+.mid {
+  flex-direction: column;
+  flex-wrap:wrap;
+  width:100%;
+  align-items:center;
+     }
+.one, .two, .three, .four{
+  width:50%;
+   }
+
+p{
+  width:100%;
 }
 }
