--- a/style/index.css
+++ b/style/index.css
@@ -18,6 +18,22 @@ nav {
     padding: 2rem;
 }
 
+.home {
+    border: .5rem solid #e06f0b;
+}
+
+.about {
+    border: .5rem solid #e06f0b;
+}
+
+.contact {
+    border: .5rem solid #e06f0b;
+}
+
+.projects {
+    border: .5rem solid #e06f0b;
+}
+
 .container1 {
     display:flex;
 }
@@ -48,8 +64,22 @@ footer {
     display:flex;
     background: lightgreen;
     color:purple;
+    flex-direction: column;
 }
 
-h3:hover {
-    color: (209, 139, 9);
+.container {
+    justify-content: center;
 }
+button:hover {
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
